<resources>
    <string name="app_name">Bank Czasu</string>
    <string name="app_name_extended">Bank Czasu - Aplikacja Mobilna do wymiany usług</string>
    <string name="version">Wersja 1.0.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Aplikacja do wzajemniej wymiany usług</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="offers">Oferty</string>
    <string name="service">Usługa</string>
    <string name="my_offerts">Moje Oferty</string>
    <string name="user">Użytkownik</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="user_name">Nazwa użytkownika</string>
    <string name="log_out">Wyloguj się</string>
    <string name="my_profile">Mój profil</string>
    <string name="others">Inne</string>
    <string name="about_app">O aplikacji</string>
    <string name="tutorial">Poradnik</string>
    <string name="messages">Wiadomości</string>
    <string name="sign_in">Zaloguj się</string>
    <string name="sign_in_with_google">Zaloguj Się z Google</string>
    <string name="change_login">Zmień nazwę użytkownika</string>
    <string name="change_email">Zmień adres email</string>
    <string name="change_password">Zmień hasło</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_password">Nowe hasło</string>
    <string name="repeat_new_password">Potwórz nowe hasło</string>
    <string name="or">LUB</string>
    <string name="sign_up">Zarejestruj się</string>
    <string name="change">Zmień</string>
    <string name="cancel">Anuluj</string>
    <string name="close">Zamknij</string>
    <string name="time_currency">Czasowaluta: </string>
    <string name="description">Opis</string>
    <string name="service_name">Nazwa usługi</string>
    <string name="add_service">Dodawanie usługi</string>
    <string name="add">Dodaj</string>
    <string name="category">Kategoria</string>
    <string name="education">Edukacja</string>
    <string name="home">Prace domowe</string>
    <string name="repairs">Naprawy</string>
    <string name="hobby">Hobby</string>
    <string name="transport">Transport</string>
    <string name="computer_science">Informatyka</string>
    <string name="food">Jedzenie</string>
    <string name="sport">Sport</string>
    <string name="empty_screen_timebanks">Nie jesteś jeszcze w żadnym banku czasu</string>
    <string name="create_timebank">Stwórz nowy Bank Czasu</string>
    <string name="join_timebank">Dołącz do Banku Czasu</string>
    <string name="write_timebank_code">Wpisz kod banku czasu</string>
    <string name="timbank_code">Kod banku czasu</string>
    <string name="join">Dołącz</string>
    <string name="create">Stwórz</string>
    <string name="add_person">Dodaj osobę</string>
    <string name="give_code_to_others">Przekaż ten kod osobie, którą chcesz dodać do banku</string>
    <string name="members">członkowie</string>
    <string name="cost">Koszt</string>
    <string name="get_setvice">kup usługę</string>
    <string name="service_owner">Wystawiający</string>
    <string name="creation_date">Data wystawienia</string>
    <string name="service_done">Usługa wykonana</string>
    <string name="swipe_to_confirm">Przesuń w prawo, aby potwierdzić</string>
    <string name="swipe_to_cancel">Przesuń w lewo, aby anulować</string>
    <string name="choose_photo">Wybierz zdjęcie</string>
    <string name="choose_from_gallery">Wybierz z galerii</string>
    <string name="take_photo">Zrób zdjęcie</string>

    <string name="about_app_description">Autor aplikacji:\nDenis Lewandowski\n\nAplikacja stworzona w ramach pracy inżynierskiej.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edytuj</string>
    <string name="delete">USUŃ</string>
    <string name="edit_service">Edycja usługi</string>
    <string name="copied_to_clipboard">Skopiowano do schowka</string>
    <string name="copy">Kopiuj</string>
    <string name="services_to_do">Usługi do wykonania</string>
    <string name="change_photo">Zmień zdjęcie</string>
    <string name="back">COFNIJ</string>
    <string name="back_service">COFNIJ USŁUGĘ</string>
    <string name="back_service_description">Cofanie usługi - jeśli nie jesteś w stanie wykonać usługi to cofnij usługę, kupujący otrzyma wtedy z powrotem swoją czasowalutę.</string>
    <string name="confirm">POTWIERDŹ</string>
    <string name="confirm_service">Potwierdź wykonanie</string>
    <string name="confirm_service_description">Jeśli usługa została wykonana - potwierdź jej wykonanie. Właściciel usługi otrzyma wtedy swoją czasowalutę.</string>
    <string name="write_name">Wpisz swoje imie...</string>
    <string name="exit_timebank">Opuść bank czasu</string>
    <string name="exit_timebank_description">Opuść aktualny bank czasu - jeśli opuścisz bank czasu przepadną wszystkie Twoje oferty usług i czasowaltua. Czy na pewno chcesz opuścić bank czasu?</string>
    <string name="no">Nie</string>
    <string name="leave">Opuść bank czasu</string>
    <string name="join_to_timbank_message">Dołącz do banku czasu, aby korzystać z chatu</string>
    <string name="type_message">Napisz wiadomość...</string>
    <string name="group_chat">Chat grupowy</string>
    <string name="empty_screen_services">Nie ma żadnych wystawionych usług</string>
    <string name="empty_screen_myservices">Nie wystawiłeś jeszcze żadnej usługi</string>
    <string name="empty_screen_todo">Nie masz aktualnie usług do wykonania</string>
</resources>
