<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_services_offered"
            android:icon="@drawable/ic_menu_clock"
            android:title="@string/offers" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Narzędzia" />
    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_myprofile"
                android:icon="@drawable/ic_menu_person"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
