<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:id="@+id/image_empty_timebanks"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_above="@id/join_timebank_button"
       android:text="@string/empty_screen_timebanks"
       android:drawableTop="@drawable/ic_group" />

    <Button
        android:id="@+id/join_timebank_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@color/oceanBlue"
        android:textColor="#FFF"
        android:text="@string/join_timebank"
        />

    <Button
        android:id="@+id/create_timebank_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/join_timebank_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/oceanBlue"
        android:textColor="#FFF"
        android:text="@string/create_timebank"
        />

</RelativeLayout>