<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/service_top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:background="@color/oceanBlue">

        <TextView
            android:id="@+id/service_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/service_name"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/category_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:layout_marginEnd="16dp"
            android:background="@drawable/oval_background_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/service_top_bar"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/service_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/oceanBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/category" />

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/oceanBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/service_owner" />

        <TextView
            android:id="@+id/service_owner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/oceanBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/creation_date" />

        <TextView
            android:id="@+id/creation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/oceanBlue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cost" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/oceanBlue">

            <TextView
                android:id="@+id/time_currency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFF"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/currency_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/time_currency_value"
                android:src="@drawable/ic_timecurrency" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/oceanBlue"
            android:text="@string/close"
            android:textColor="#FFF" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFF" />
        <Button
            android:id="@+id/get_service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/oceanBlue"
            android:text="@string/get_setvice"
            android:textColor="#FFF" />


    </LinearLayout>
</RelativeLayout>