<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/oceanBlue"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:scaleType="center"
        android:text="@string/back_service"
        android:textColor="#FFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/back_service_description"
        />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="48dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:layout_toStartOf="@+id/center_line"
            android:background="@color/oceanBlue">

            <Button
                android:id="@+id/close_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:text="@string/close"
                android:textColor="#FFF" />
        </FrameLayout>



        <View
            android:id="@+id/center_line"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="#FFF" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:layout_toEndOf="@id/center_line"
            android:background="@color/oceanBlue">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:text="@string/back_service"
                android:textColor="#FFF" />
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>