<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context="pl.denislewandowski.bankczasu.LoginActivity">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailSignInEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_email_white"
            android:drawablePadding="12dp"
            android:hint="Email..."
            android:textColor="#FFF"
            android:textColorHint="#BBB" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#FFF" />

        <EditText
            android:id="@+id/passwordSignInEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/transparent"
            android:drawableStart="@drawable/ic_password_white"
            android:drawablePadding="12dp"
            android:hint="Hasło..."
            android:inputType="textPassword"
            android:textColor="#FFF"
            android:textColorHint="#BBB" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="#FFF" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/loginLayout"
        android:layout_marginStart="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="24dp"
        android:background="#FFF"
        android:shadowColor="#888"
        android:text="@string/sign_in"
        android:textColor="#606060" />

    <RelativeLayout
        android:id="@+id/orLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/signInButton">


        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="6dp"
            android:layout_toStartOf="@id/orTextView"
            android:background="#FFF" />

        <TextView
            android:id="@+id/orTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/or"
            android:textColor="#FFF" />

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/orTextView"
            android:background="#FFF" />

    </RelativeLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/singUpPadding"
        android:layout_marginEnd="@dimen/singUpPadding"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="#FFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>